<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="load_notification_channel_id" translatable="false">load_channel</string>
    <string name="load_notification_channel_name" translatable="false">Load</string>
    <string name="notification_Action">Check status</string>


    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp">LoadApp - Current repository by udacity</string>
    <string name="retrofit">Retrofit - type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="success">Success</string>
    <string name="failed">Fail</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="detail_button">OK</string>


</resources>
